k8s/llama/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: llama-stripprefix
  namespace: default
spec:
  stripPrefix:
    prefixes:
      - /llm
